--- a/src/components/request/autoComplete/autoComplete.css
+++ b/src/components/request/autoComplete/autoComplete.css
@@ -1,11 +1,23 @@
 .form  ul {
+    position: relative;
     margin: 0 0 5px;
     padding: 0;
     list-style: none;
 }
 
-.form  ul::after {
-    content: '👆当てはまったら必ずクリックしてね！👆'
+.form  ul > li:last-child {
+    margin-bottom: 50px;
+}
+
+.form  ul > li:last-child::after {
+    content: '👆当てはまったら必ずクリックしてね！👆';
+    position: absolute;
+    text-align: center;
+    color: black;
+    right:0;
+    left: 0;
+    bottom: -35px;
+    pointer-events: none;
 }
 
 .form  ul > li {
