--- a/src/components/youtube-player.css
+++ b/src/components/youtube-player.css
@@ -12,3 +12,50 @@ height: 100%;
 top: 0;
 left: 0;
 }
+
+.video-page .youtube-player-wrapper {
+/* z-50 fixed sm:absolute mx-auto sm:left-0 sm:right-0 w-full max-w-4xl mb-2 */
+    z-index: 9999;
+    position: fixed;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 56rem;
+    margin-bottom: 0.5rem;
+}
+.not-video-page .youtube-player-wrapper {
+/* z-50 fixed left-0 bottom-12 sm:bottom-0 w-1/2 sm:w-full max-w-sm */
+    z-index: 9999;
+    position: fixed;
+    left: 0;
+    bottom: 2.5rem;
+    margin: 0 auto;
+    width: 50%;
+    max-width: 24rem;
+}
+@media (min-width: 640px) {
+    .video-page .youtube-player-wrapper {
+        position: absolute;
+        left: 0;
+        right: 0;
+    }
+    .not-video-page .youtube-player-wrapper {
+        bottom: 0;
+        width: 100%;
+    }
+}
+
+.youtube-player-wrapper a {
+    /* className='absolute top-0 right-0 bottom-0 left-0 w-full h-full opacity-50 hover:bg-gray-300' */
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 50%;
+}
+
+.video-page .youtube-player-wrapper a {
+    display: none;
+}
