--- a/src/components/request/autoComplete/autoComplete.css
+++ b/src/components/request/autoComplete/autoComplete.css
@@ -5,11 +5,17 @@
     list-style: none;
 }
 
-.form  ul > li:last-child {
-    margin-bottom: 50px;
+.form ul::after {
+    content: '👆当てはまったら必ずクリックしてね！👆';
+    display: block;
+    text-align: center;
 }
 
-.form  ul > li:last-child::after {
+/* .form  ul > li:last-child {
+    margin-bottom: 50px;
+} */
+
+/* .form  ul > li:last-child::after {
     content: '👆当てはまったら必ずクリックしてね！👆';
     position: absolute;
     text-align: center;
@@ -18,7 +24,7 @@
     left: 0;
     bottom: -35px;
     pointer-events: none;
-}
+} */
 
 .form  ul > li {
     display: block;
