ランダム再生と共有ボタンの追加

--- a/src/pages/request_add_video_preview.css
+++ b/src/pages/request_add_video_preview.css
@@ -20,3 +20,17 @@
     /* animation: show 1s linear 0s; */
     max-height: 9999px;
 }
+
+
+@keyframes ball {
+    from {
+        transform: scale(0.1)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+.ball-animation {
+    animation: ball 4s ease-in 0s both;
+}
